--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
  
   "name": "dubai-restaurant",
  
-  "homepage": "https://nizarnaser.github.io/dubai-restauranr-karaoke-bar",
+  "homepage": "https://nizarnaser.github.io/dubai-restaurant",
  
   "private": true,
  
@@ -48,6 +48,7 @@
  
    
   "i18next": "^23.16.5",
+
  
    
   "react": "^18.3.1",
